Remove array from single line command

--- a/composer.json
+++ b/composer.json
@@ -27,17 +27,17 @@
     },
     "scripts" :{
         "pre-update-cmd": "BEAR\\Skeleton\\Composer::install",
-        "post-create-project-cmd": ["BEAR\\Skeleton\\Composer::postInstall"],
-        "post-install-cmd": ["@setup"],
-        "post-update-cmd": ["@setup"],
-        "setup": ["php bin/setup.php"],
-        "compile": ["bear.compile 'BEAR\\Skeleton' prod-app ./"],
-        "test": ["phpunit"],
+        "post-create-project-cmd": "BEAR\\Skeleton\\Composer::postInstall",
+        "post-install-cmd": "@setup",
+        "post-update-cmd": "@setup",
+        "setup": "php bin/setup.php",
+        "compile": "bear.compile 'BEAR\\Skeleton' prod-app ./",
+        "test": "phpunit",
         "tests": ["@cs", "@qa", "@test"],
-        "coverage": ["php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
-        "pcov": ["php -d pcov.enabled=1 ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
-        "cs": ["phpcs"],
-        "cs-fix": ["phpcbf"],
+        "coverage": "php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage",
+        "pcov": "php -d pcov.enabled=1 ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage",
+        "cs": "phpcs",
+        "cs-fix": "phpcbf",
         "qa": ["phpmd src text ./phpmd.xml", "phpstan analyse -c phpstan.neon --no-progress", "psalm --no-progress"],
         "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
         "app": "php bin/app.php",
