--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=7.2.0",
         "bear/package": "^1.10",
-        "symfony/dotenv": "^5.0"
+        "bear/dotenv": "^1.0"
     },
     "require-dev": {
         "ext-json": "*",
