--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: php
 
 dist: bionic
 
+os: linux
+
 php:
   - 7.2
   - 7.3
@@ -11,9 +13,6 @@ cache:
   directories:
     - ./vendor
     - $HOME/.composer/cache
-
-matrix:
-  fast_finish: true
 
 before_install:
   - phpenv config-rm xdebug.ini || true
