--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     "require-dev": {
         "ext-json": "*",
         "bear/devtools": "^0.1",
-        "bear/qatools": "^1.9",
+        "bamarni/composer-bin-plugin": "^1.4",
         "composer/composer": "^1.10",
-        "doctrine/coding-standard": "^8.1",
+        "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-master"
     },
     "autoload": {
@@ -36,14 +36,17 @@
         "post-install-cmd": "@setup",
         "setup": "php bin/setup.php",
         "compile": "bear.compile 'BEAR\\Skeleton' prod-app ./",
-        "test": "phpunit",
-        "tests": ["@cs", "@qa", "@test"],
-        "coverage": "php -dzend_extension=xdebug.so ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage --log-junit=build/coverage/junit.xml",
-        "pcov": "php -d pcov.enabled=1 ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage --log-junit=build/coverage/junit.xml",
-        "cs": "phpcs",
-        "cs-fix": "phpcbf",
-        "qa": ["phpmd src text ./phpmd.xml", "phpstan analyse -c phpstan.neon --no-progress", "psalm --no-progress"],
-        "metrics": ["@coverage", "phpmetrics --junit=build/coverage/junit.xml --config=./phpmetrics.json"],
+        "test": ["./vendor/bin/phpunit"],
+        "tests": ["@cs", "@sa", "@test"],
+        "coverage": ["php -dzend_extension=xdebug.so -dxdebug.mode=coverage ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage"],
+        "pcov": ["php -dextension=pcov.so -d pcov.enabled=1 ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage  --coverage-clover=coverage.xml"],
+        "cs": ["./vendor/bin/phpcs"],
+        "cs-fix": ["./vendor/bin/phpcbf src tests"],
+        "clean": ["./vendor/bin/phpstan clear-result-cache", "./vendor/bin/psalm --clear-cache", "rm -rf ./var/tmp/*.php"],
+        "sa": ["./vendor/bin/phpstan analyse -c phpstan.neon", "psalm --show-info=true"],
+        "metrics": ["./vendor/bin/phpmetrics --report-html=build/metrics --exclude=Exception --junit=build/junit.xml src"],
+        "phpmd": ["./vendor/bin/phpmd --exclude src/Annotation src text ./phpmd.xml"],
+        "build": ["@cs", "@sa", "@pcov", "@metrics"],
         "serve": "php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
         "app": "php bin/app.php",
         "page": "php bin/page.php"
