--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -35,7 +35,9 @@ jobs:
         run: composer install --no-interaction --no-progress --prefer-dist
 
       - name: Validate composer.json
-        run: composer validate --strict
+        run |
+          composer update
+          composer validate --strict
 
       - name: Run PHP_CodeSniffer
         run: ./vendor/bin/phpcs -q --no-colors --report=checkstyle src tests | cs2pr
