--- a/vendor-bin/tools/composer.json
+++ b/vendor-bin/tools/composer.json
@@ -1,11 +1,14 @@
 {
+    "name": "bear/qatools",
+    "description": "QA tools",
     "require": {
-        "doctrine/coding-standard": "^8.2",
-        "phpmd/phpmd": "^2.9",
+        "doctrine/coding-standard": "^9.0",
+        "phpmd/phpmd": "^2.10",
         "phpmetrics/phpmetrics": "^2.7",
         "phpstan/phpstan": "^0.12",
-        "psalm/plugin-phpunit": "^0.13",
-        "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^4.2"
+        "psalm/plugin-phpunit": "^0.15",
+        "slevomat/coding-standard": "^7.0",
+        "squizlabs/php_codesniffer": "^3.6",
+        "vimeo/psalm": "^4.7"
     }
 }
