--- a/apidoc.xml.dist
+++ b/apidoc.xml.dist
@@ -2,7 +2,7 @@
 <apidoc
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="./vendor/bear/api-doc/apidoc.xsd">
-    <appName>BEAR/Skeleton</appName>
+    <appName>BEAR\Skeleton</appName>
     <scheme>app</scheme>
     <docDir>docs</docDir>
     <format>html</format>
