--- a/vendor-bin/tools/composer.json
+++ b/vendor-bin/tools/composer.json
@@ -1,14 +1,14 @@
 {
     "name": "bear/qatools",
     "description": "QA tools",
-    "require": {
+    "require-dev": {
         "doctrine/coding-standard": "^9.0",
         "phpmd/phpmd": "^2.10",
-        "phpmetrics/phpmetrics": "^2.7",
-        "phpstan/phpstan": "^0.12",
-        "psalm/plugin-phpunit": "^0.15",
+        "phpmetrics/phpmetrics": "^v2.7",
+        "phpstan/phpstan": "^1.0",
+        "psalm/plugin-phpunit": "^0.16",
         "slevomat/coding-standard": "^7.0",
         "squizlabs/php_codesniffer": "^3.6",
-        "vimeo/psalm": "^4.7"
+        "vimeo/psalm": "^4.11"
     }
 }
