Add allow-plugins config

--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,9 @@
     },
     "config": {
         "sort-packages": true,
-        "process-timeout": 0
+        "process-timeout": 0,
+        "allow-plugins": {
+            "bamarni/composer-bin-plugin": true
+        }
     }
 }
