--- a/vendor-bin/tools/composer.json
+++ b/vendor-bin/tools/composer.json
@@ -10,5 +10,11 @@
         "slevomat/coding-standard": "^7.0",
         "squizlabs/php_codesniffer": "^3.6",
         "vimeo/psalm": "^4.11"
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "composer/package-versions-deprecated": true
+        }
     }
 }
