--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,15 @@
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
         "bear/dotenv": "^1.0",
-        "bear/package": "^1.12.1",
-        "bear/resource": "^1.16",
-        "bear/sunday": "^1.5",
-        "ray/aop": "^2.11",
-        "ray/di": "^2.13"
+        "bear/package": "^1.14",
+        "bear/resource": "^1.17",
+        "bear/sunday": "^1.6",
+        "ray/aop": "^2.12",
+        "ray/di": "^2.14"
     },
     "require-dev": {
-        "bear/api-doc": "1.x-dev",
-        "bear/devtools": "^0.1",
+        "bear/api-doc": "^1.1",
+        "bear/devtools": "^1.0",
         "bamarni/composer-bin-plugin": "^1.4",
         "composer/composer": "^2.1",
         "phpunit/phpunit": "^9.5",
