--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,11 @@
         "test": "./vendor/bin/phpunit",
         "coverage": "php -dzend_extension=xdebug.so -dxdebug.mode=coverage ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage",
         "pcov": "php -dextension=pcov.so -d pcov.enabled=1 ./vendor/bin/phpunit --coverage-text --coverage-html=build/coverage  --coverage-clover=coverage.xml",
-        "cs": "./vendor/bin/phpcs",
-        "cs-fix": "./vendor/bin/phpcbf src tests",
-        "metrics": "./vendor/bin/phpmetrics --report-html=build/metrics --exclude=Exception src",
-        "clean": ["./vendor/bin/phpstan clear-result-cache", "./vendor/bin/psalm --clear-cache", "rm -rf ./var/tmp/*.php"],
-        "sa": ["./vendor/bin/psalm --show-info=true", "./vendor/bin/phpstan analyse -c phpstan.neon", "./vendor/bin/phpmd src text ./phpmd.xml"],
+        "cs": "./vendor-bin/tools/vendor/bin/phpcs",
+        "cs-fix": "./vendor-bin/tools/vendor/bin/phpcbf src tests",
+        "metrics": "./vendor-bin/tools/vendor/bin/phpmetrics --report-html=build/metrics --exclude=Exception src",
+        "clean": ["./vendor-bin/tools/vendor/bin/phpstan clear-result-cache", "./vendor-bin/tools/vendor/bin/psalm --clear-cache", "rm -rf ./var/tmp/*.php"],
+        "sa": ["./vendor-bin/tools/vendor/bin/psalm --show-info=true", "./vendor-bin/tools/vendor/bin/phpstan analyse -c phpstan.neon", "./vendor-bin/tools/vendor/bin/phpmd src text ./phpmd.xml"],
         "tests": ["@cs", "@sa", "@test"],
         "build": ["@clean", "@cs", "@sa", "@pcov", "@compile", "@metrics"],
         "serve": "COMPOSER_PROCESS_TIMEOUT=0 php -dzend_extension=xdebug.so -S 127.0.0.1:8080 -t public",
@@ -76,8 +76,8 @@
     },
     "extra": {
         "bamarni-bin": {
-            "bin-links": true,
-            "forward-command": false
+            "bin-links": false,
+            "forward-command": true
         }
     }
 }
